starting to fill out table

--- a/index.html
+++ b/index.html
@@ -24,8 +24,28 @@
                 <table>
                     <caption>Assets</caption>
                     <!--The thead and tbody elements are used to indicate which portion of your table is the header, and which portion contains the primary data or content.-->
-                    <thead></thead>
-                    <tbody></tbody>
+                    <thead>
+                        <!--The tr element is used to indicate a table row.-->
+                        <tr>
+                            <!--The td element indicates a data cell, while the th element indicates a header cell.-->
+                            <td><!--This  td element exists only to ensure your table has a four-column layout and associate the headers with the correct columns.--></td>  
+                            <th><span class="sr-only year">2019</span></th>
+                            <th><span class="sr-only year">2020</span></th>
+                            <th class="current"><span class="sr-only year">2021</span></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="data">
+                            <th>Cash <span class="description">This is the cash we currently have on hand.</span>
+                                <td>$25</td>
+                                <td>$30</td>
+                                <td class="current">$28</td>
+                            </th>
+                        </tr></span>
+                        <tr class="data"></tr>
+                        <tr class="data"></tr>
+                        <tr class="total"></tr>
+                    </tbody>
                 </table>
                 <table></table>
                 <table></table>
