second table done

--- a/index.html
+++ b/index.html
@@ -86,9 +86,30 @@
                                 <td class="current">$0</td>
                             </th>
                         </tr>
-                        <tr class="data"></tr>
-                        <tr class="data"></tr>
-                        <tr class="total"></tr>
+
+                        <tr class="data">
+                            <th>Expenses <span class="description">Annual anticipated expenses, such as payroll.</span>
+                                <td>$200</td>
+                                <td>$300</td>
+                                <td class="current">$400</td>
+                            </th>
+                        </tr>
+
+                        <tr class="data">
+                            <th>Credit <span class="description">The outstanding balance on our credit card.</span>
+                                <td>$50</td>
+                                <td>$50</td>
+                                <td class="current">$75</td>
+                            </th>
+                        </tr>
+
+                        <tr class="total">
+                            <th>Total <span class="sr-only">Liabilities</span>
+                                <td>$750</td>
+                                <td>$600</td>
+                                <td class="current">$475</td>
+                            </th>
+                        </tr>
                     </tbody>
                 </table>
                 <table></table>
