--- a/index.html
+++ b/index.html
@@ -112,7 +112,27 @@
                         </tr>
                     </tbody>
                 </table>
-                <table></table>
+
+                <table>
+                    <caption>Net Worth</caption>
+                    <thead>
+                        <tr>
+                            <td></td>
+                            <th><span class="sr-only">2019</span></th>
+                            <th><span class="sr-only">2020</span></th>
+                            <th><span class="sr-only">2021</span></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="total">
+                            <th>Total <span class="sr-only">Net Worth</span>
+                                <td>$-171</td>
+                                <td>$136</td>
+                                <td class="current">$334</td>
+                            </th>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
     </main>
